Fixed overflowing issue on main

--- a/Naveed/eksamensprojekt-mp-1/style.css
+++ b/Naveed/eksamensprojekt-mp-1/style.css
@@ -43,8 +43,8 @@
 .body{
     max-width: 768px; /* iPad width */
     margin: auto; /* center content */
-    width: 100svw;
-    height: 100svh;
+    width: auto;
+    height: auto;
     background: 
     linear-gradient(
     #053B72 0%,
@@ -72,7 +72,8 @@
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); 
     padding: 1em;
-    min-height: 238px;
+    height: auto;
+
 }
 
 /* animation(s) */
@@ -105,11 +106,10 @@
 }
 .section{
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    position: relative;
+    /* position: relative; */
     row-gap: 1em;
 }
 
